# prometheus-ml

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: titanic_demo.py
prometheus/: cli.py
prometheus/dna/: classifier.py
prometheus/ensemble/: architect.py
prometheus/hypothesis/: generator.py
prometheus/intake/: problem_spec.py  profiler.py
prometheus/policy/: tepe.py
prometheus/runner/: executor.py
prometheus/store/: meta_store.py
prometheus/validator/: leakage.py
tests/: test_profiler.py  test_tepe.py
tests/fixtures/: sample.csv
