[project]
name = "prometheus-ml"
version = "0.1.0"
description = "Decision engine for ML hackathons"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "typer>=0.12",
    "rich>=13.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
prometheus = "prometheus.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
